@@ -104,7 +104,7 @@ public class HxInsightClient
             ensureCorrectHttpStatusReturned(SC_ACCEPTED, httpResponse);
 
             return objectMapper.readValue(httpResponse.body(), QuestionResponse.class)
-                    .questionId();
+                    .getQuestionId();
         }
         catch (IOException | InterruptedException e)
         {
@@ -117,7 +117,7 @@ public class HxInsightClient
         try
         {
             HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(config.getAnswerUrl().formatted(questionId)))
+                    .uri(URI.create(String.format(config.getAnswerUrl(), questionId)))
                     .headers(authService.getAuthHeaders())
                     .GET()
                     .build();
@@ -131,7 +131,7 @@ public class HxInsightClient
         }
         catch (IOException | InterruptedException e)
         {
-            throw new WebScriptException(SC_SERVICE_UNAVAILABLE, "Failed to get answer to question with id %s".formatted(questionId), e);
+            throw new WebScriptException(SC_SERVICE_UNAVAILABLE, String.format("Failed to get answer to question with id %s", questionId), e);
         }
     }
 }
